atualizando nome do projeto

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <h1 id="main-title">Quizz de Programação</h1>
+    <h1 id="main-title">Quizz Conhecimentos Gerais:</h1>
     <div id="score-container" class="hide">
         <h2>Parabéns</h2>
         <p id="display-score"><span>90</span>%</p>
