--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quizz Programação</title>
+    <title>Quizz</title>
     <link rel="icon" href="./img/favicon.icon" type="image/x-icon">
    
     <link rel="stylesheet" type="text/css" href="css/styles.css">
